--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a href="#intro">Intro</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#creator">Creator</a></li>
-                <li><a class="playBtn" href="/game">Play the Game</a></li>
+                <li><a class="playBtn" href="./game">Play the Game</a></li>
             </ul>
         </nav>
     </header>
