--- a/index.html
+++ b/index.html
@@ -6,13 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--  Essential META Tags -->
+
+    <meta property="og:title" content="TTT Typing Game by Emsad | JS Hacks: Typing Karaoke Hackaton by Mintbean">
+    <meta property=" og:description"
+        content="Type as fast as you can... | Practice your typing skills and test your typing speed with TTT (Typing Typing Typing) by typing nice quotes.">
+    <meta property="og:image" content="https://emsad87.github.io/typing-game/TTT.png">
+    <meta property="og:url" content="https://emsad87.github.io/typing-game/">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <meta name="author" content="Emsad Ahmetašević">
+
+
+    <!--  Non-Essential, But Recommended -->
+
+    <meta property="og:site_name" content="TTT Typing Game by Emsad | JS Hacks: Typing Karaoke Hackaton by Mintbean">
+    <meta name="twitter:image:alt" content="TTT Typing Game Preview">
+
+    <title>Typing Typing Typing</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Ubuntu:wght@400;700&display=swap"
         rel="stylesheet">
-
-    <title>Typing Typing Typing</title>
 
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/app.js" defer></script>
