--- a/game/index.html
+++ b/game/index.html
@@ -31,47 +31,51 @@
             </div>
         </div>
 
-        <div data-depth="0.3">
-
-            <div class="info">
-                <div class="wpm">
-                    <div class="curr_wpm">100</div>
-                    <div class="header_text">WPM</div>
-                </div>
-                <div class="cpm">
-                    <div class="curr_cpm">100</div>
-                    <div class="header_text">CPM</div>
-                </div>
-                <div class="errors">
-                    <div class="curr_errors">0</div>
-                    <div class="header_text">Errors</div>
-                </div>
-                <div class="timer">
-                    <div class="curr_time">60s</div>
-                    <div class="header_text">Time</div>
-                </div>
-                <div class="accuracy">
-                    <div class="curr_accuracy">100</div>
-                    <div class="header_text">Accuracy</div>
-                </div>
-            </div>
-
-        </div>
-
     </div>
 
     <div class="backBtn">
         <a href="../index.html">Back</a>
     </div>
 
-    <a class="mintbean" href="https://www.mintbean.io/">"JS Hacks: Typing Karaoke" Hackaton by Mintbean</a>
+    <div class="info">
+        <div class="wpm">
+            <div class="curr_wpm">100</div>
+            <div class="header_text">WPM</div>
+        </div>
+        <div class="cpm">
+            <div class="curr_cpm">100</div>
+            <div class="header_text">CPM</div>
+        </div>
+        <div class="errors">
+            <div class="curr_errors">0</div>
+            <div class="header_text">Errors</div>
+        </div>
+        <div class="timer">
+            <div class="curr_time">60s</div>
+            <div class="header_text">Time</div>
+        </div>
+        <div class="accuracy">
+            <div class="curr_accuracy">100</div>
+            <div class="header_text">Accuracy</div>
+        </div>
+    </div>
+
 
     <div class="panel">
         <div class="quote animate__animated animate__zoomInDown animate__faster">Click on start</div>
         <textarea class="input_area" placeholder="start typing here..."></textarea>
         <button class="start_btn animate__zoomInUp">Start</button>
+        <div>*Game has sound effects and animations.</div>
         <button class="restart_btn animate__animated animate__zoomInUp animate__faster">Restart</button>
     </div>
+
+    <a class="mintbean" href="https://www.mintbean.io/">"JS Hacks: Typing Karaoke" Hackaton by Mintbean</a>
+
+    <audio id="softClick" src="./audio/soft-click.wav"></audio>
+    <audio id="hardClick" src="./audio/hard-click.wav"></audio>
+    <audio id="updateSound" src="./audio/update.wav"></audio>
+    <audio id="startSound" src="./audio/start.wav"></audio>
+    <audio id="endSound" src="./audio/end.wav"></audio>
 
     <script>
         var scene = document.getElementById('scene');
@@ -79,6 +83,7 @@
     </script>
 
     <script type="module" src="./js/modules/quotes.js"></script>
+    <script type="module" src="./js/modules/functions.js"></script>
     <script type="module" src="./js/game.js"></script>
 
 </body>
