--- a/index.html
+++ b/index.html
@@ -6,22 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--  Essential META Tags -->
-
     <meta property="og:title" content="TTT Typing Game by Emsad | JS Hacks: Typing Karaoke Hackaton by Mintbean">
+    <meta property="og:site_name" content="TTT Typing Game by Emsad | JS Hacks: Typing Karaoke Hackaton by Mintbean">
+    <meta property="og:url" content="https://emsad87.github.io/typing-game/">
     <meta property=" og:description"
         content="Type as fast as you can... | Practice your typing skills and test your typing speed with TTT (Typing Typing Typing) by typing nice quotes.">
     <meta property="og:image" content="https://emsad87.github.io/typing-game/TTT.png">
-    <meta property="og:url" content="https://emsad87.github.io/typing-game/">
     <meta name="twitter:card" content="summary_large_image">
-
-    <meta name="author" content="Emsad Ahmetašević">
-
-
-    <!--  Non-Essential, But Recommended -->
-
-    <meta property="og:site_name" content="TTT Typing Game by Emsad | JS Hacks: Typing Karaoke Hackaton by Mintbean">
     <meta name="twitter:image:alt" content="TTT Typing Game Preview">
+    <meta name="author" content="Emsad Ahmetašević">
 
     <title>TTT Typing Game by Emsad | JS Hacks: Typing Karaoke Hackaton by Mintbean</title>
 
@@ -40,6 +33,8 @@
     <div class="loader">
         <div class="loader__spinner"></div>
     </div>
+
+    <span class="toTop">&#8682;</span>
 
     <nav>
         <div class="logo">
@@ -71,6 +66,8 @@
             <aside>
                 <img src="./img/intro.png" alt="">
             </aside>
+
+            <span class="scroll-indicator">&#8673;</span>
 
         </div>
 
@@ -116,10 +113,14 @@
             </section>
 
             <section class="tools">
-                <h2>Tools used:</h2>
-                <img class="toolIcon" src="./img/svg/html.svg" alt="">
-                <img class="toolIcon" src="./img/svg/css.svg" alt="">
-                <img class="toolIcon" src="./img/svg/javascript.svg" alt="">
+                <article>
+                    <h2>Tools used:</h2>
+                </article>
+                <aside>
+                    <img class="toolIcon" src="./img/svg/html.svg" alt="">
+                    <img class="toolIcon" src="./img/svg/css.svg" alt="">
+                    <img class="toolIcon" src="./img/svg/javascript.svg" alt="">
+                </aside>
             </section>
 
         </div>
@@ -197,10 +198,14 @@
             </div>
 
             <div class="copyright">
-                <p>Copyright &copy; <span class="copy-year"></span> A. Emsad</p>
+                <p><a href="https://emsad87.github.io/" title="emsad87.github.io" target="_blank">Copyright &copy; <span
+                            class="copy-year"></span> Emsad
+                        A.</a>
+                </p>
             </div>
+
             <div class="footer__right">
-                <a href="https://www.mintbean.io/">Mintbean</a>
+                <a href="https://www.mintbean.io/" title="www.mintbean.io" target="_blank">Mintbean</a>
             </div>
         </div>
 
